<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent"
    android:focusable="true">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/layout"

            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@null">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/registerButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="-1dp"
                        android:layout_marginBottom="0dp"
                        android:paddingRight="20dp"
                        android:text="@string/app_name"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </androidx.appcompat.widget.Toolbar>




            <LinearLayout
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_heading"
                        android:textSize="32sp"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_centerVertical="true"
                        />


                </RelativeLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintAnimationEnabled="true"
                    app:hintTextAppearance="@style/MyHintStyle"
                    app:boxStrokeColor="@color/colorPrimaryDark"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:hint="@string/username_hint"/>

                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintAnimationEnabled="true"
                    app:hintTextAppearance="@style/MyHintStyle"
                    app:passwordToggleEnabled="true"
                    app:boxStrokeColor="@color/colorPrimaryDark"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:hint="@string/password_hint"/>

                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:id="@+id/signInButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_login"
                    />

                <Button
                    android:id="@+id/signUpBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up" />


            </LinearLayout>



        </LinearLayout>

    </FrameLayout>

</ScrollView>