<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent"
    android:focusable="true"
    >


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/layout"

            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@null">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/registerButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="-1dp"
                        android:layout_marginBottom="0dp"
                        android:paddingRight="20dp"
                        android:text="@string/app_name"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </androidx.appcompat.widget.Toolbar>




            <LinearLayout
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_up_heading"
                        android:textSize="32sp"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_centerVertical="true"
                        />


                </RelativeLayout>



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintAnimationEnabled="true"
                    app:hintTextAppearance="@style/MyHintStyle"
                    app:boxStrokeColor="@color/colorPrimaryDark"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:hint="@string/enter_name"/>

                </com.google.android.material.textfield.TextInputLayout>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="#FAFAFA"
                    >

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/recentLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/quantum_grey"
                        android:clickable="true"
                        android:layout_gravity="right"
                        android:elevation="0dp"
                        android:src="@drawable/ic_baseline_location_searching_24"
                        app:borderWidth="0dp"
                        app:fabSize="mini" />


                        <EditText
                            android:id="@+id/locationInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_location"/>





                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/setupButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm"/>
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>
</ScrollView>

